jwt,productapi,web updated

--- a/Anjir.Services.ProductAPI/appsettings.json
+++ b/Anjir.Services.ProductAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=MUKHAMMADKODIR\\SQLEXPRESS; Database=Anjir_Coupon; Integrated Security=True; TrustServerCertificate=True"
+    "DefaultConnection": "Server=MUKHAMMADKODIR\\SQLEXPRESS; Database=Anjir_Product; Integrated Security=True; TrustServerCertificate=True"
   },
   "ApiSettings": {
     "JwtOptions": {
