--- a/Anjir.Web/appsettings.json
+++ b/Anjir.Web/appsettings.json
@@ -8,6 +8,12 @@
   "AllowedHosts": "*",
   "ServiceUrls": {
     "CouponAPI": "https://localhost:7001",
-    "AuthAPI": "https://localhost:7002"
+    "AuthAPI": "https://localhost:7002",
+    "ProductAPI": "https://localhost:7000"
+  },
+  "ApiSettings": {
+    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
+    "Issuer": "mango-auth-api",
+    "Audience": "mango-client"
   }
 }
