--- a/Anjir.Services.ShoppingCartAPI/appsettings.json
+++ b/Anjir.Services.ShoppingCartAPI/appsettings.json
@@ -15,5 +15,9 @@
       "Issuer": "anjir-auth-api",
       "Audience": "anjir-client"
     }
+  },
+  "ServiceUrls": {
+    "ProductAPI": "http://localhost:7000",
+    "CouponAPI": "http://localhost:7001"
   }
 }
