--- a/Anjir.Web/appsettings.json
+++ b/Anjir.Web/appsettings.json
@@ -14,7 +14,7 @@
   },
   "ApiSettings": {
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET",
-    "Issuer": "mango-auth-api",
-    "Audience": "mango-client"
+    "Issuer": "anjir-auth-api",
+    "Audience": "anjir-client"
   }
 }
